--- a/views/add-student.hbs
+++ b/views/add-student.hbs
@@ -8,10 +8,16 @@
   </head>
   <body>
     <h3>Add Students</h3>
+    {{#if err}}
+      {{#each err.errors}}
+        <p style="color: red;">{{ message }}</p>
+      {{/each}}
+    {{/if}}
+
     <form action="/students" method="post">
-      <p>First Name: <input type="text" name="firstname"/></p>
-      <p>Last name: <input type="text" name="lastname"/></p>
-      <p>Email: <input type="email" name="email"/></p>
+      <p>First Name: <input type="text" name="firstname" required/></p>
+      <p>Last name: <input type="text" name="lastname" required/></p>
+      <p>Email: <input type="text" name="email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}" required/></p>
       <button>ADD STUDENT</button>
     </form>
   </body>
