--- a/views/add-student.hbs
+++ b/views/add-student.hbs
@@ -15,9 +15,9 @@
     {{/if}}
 
     <form action="/students" method="post">
-      <p>First Name: <input type="text" name="firstname" required/></p>
-      <p>Last name: <input type="text" name="lastname" required/></p>
-      <p>Email: <input type="text" name="email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,}" required/></p>
+      <p>First Name: <input type="text" name="firstname"/></p>
+      <p>Last name: <input type="text" name="lastname"/></p>
+      <p>Email: <input type="text" name="email"/></p>
       <button>ADD STUDENT</button>
     </form>
   </body>
