--- a/views/students/student.hbs
+++ b/views/students/student.hbs
@@ -16,6 +16,7 @@
           <th>Id</th>
           <th>First Name</th>
           <th>Last Name</th>
+          <th>Full Name</th>
           <th>Email</th>
           <th>Options</th>
         </tr>
@@ -26,6 +27,7 @@
               <td>{{ id }}</td>
               <td>{{ first_name }}</td>
               <td>{{ last_name }}</td>
+              <td>{{ first_name }} {{ last_name }}</td>
               <td>{{ email }}</td>
               <td>
                 <a href="/students/edit/{{id}}">Edit</a>
