--- a/views/teachers/edit-teacher.hbs
+++ b/views/teachers/edit-teacher.hbs
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Student</title>
+    <title>Edit Teacher</title>
   </head>
   <body>
-    <h3>Edit Students</h3>
+    <h3>Edit Teacher</h3>
       {{#each row}}
-        <form action="/students/edit/{{ id }}" method="post">
+        <form action="/teachers/edit/{{ id }}" method="post">
           <p>First Name: <input type="text" name="firstname" value="{{ first_name }}"/></p>
           <p>Last name: <input type="text" name="lastname" value="{{ last_name }}"/></p>
           <p>Email: <input type="email" name="email" value="{{ email }}"/></p>
-          <button>EDIT STUDENT</button>
+          <button>EDIT TEACHER</button>
         </form>
       {{/each}}
   </body>
