--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -5,22 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Subjects</title>
+
+    <style>
+      ul {
+        padding: 0;
+      }
+
+      ul li {
+        list-style-type: none;
+      }
+    </style>
   </head>
   <body>
-    <table>
+    <table style="width: 100%;">
       <thead>
         <tr>
           <th>Id</th>
           <th>Subject Name</th>
+          <th>Teachers</th>
         </tr>
       </thead>
-      <tbody>
-        {{!-- <% rows.forEach(data => { %>
+      <tbody align="center">
+        <% rowsSubject.forEach(rowSubject => { %>
           <tr>
-            <td><%= data.id %></td>
-            <td><%= data.subject_name %></td>
+            <td><%= rowSubject.id %></td>
+            <td><%= rowSubject.subject_name %></td>
+            <td>
+              <% rowsTeacher.forEach(rowTeacher => { %>
+                <% if (rowSubject.id === rowTeacher.SubjectId) { %>
+                  <ul>
+                    <li><%= rowTeacher.first_name %></li>
+                  </ul>
+                <% } %>
+              <% }) %>
+            </td>
           </tr>
-        <% }) %> --}
+        <% }) %>
       </tbody>
     </table>
   </body>
