--- a/views/students/add-student.ejs
+++ b/views/students/add-student.ejs
@@ -14,7 +14,7 @@
       <% }) %>
     <% } %>
 
-    <form action="/students/add" method="post">
+    <form method="post">
       <p>First Name: <input type="text" name="firstname"/></p>
       <p>Last name: <input type="text" name="lastname"/></p>
       <p>Email: <input type="text" name="email"/></p>
