--- a/views/students/edit-student.ejs
+++ b/views/students/edit-student.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h3>Edit Students</h3>
-      <form action="/students/edit/<%= row.id %>" method="post">
+      <form method="post">
         <p>First Name: <input type="text" name="firstname" value="<%= row.first_name %>"/></p>
         <p>Last name: <input type="text" name="lastname" value="<%= row.last_name %>"/></p>
         <p>Email: <input type="email" name="email" value="<%= row.email %>"/></p>
