--- a/views/students/add-subject.ejs
+++ b/views/students/add-subject.ejs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Subject</title>
-  </head>
+  <%- include('../partials/meta', {title: title}) %>
   <body>
+    <% include ../partials/navigation %>
+
     <p>First Name: <span><%= rowStudent.first_name %></span></p>
     <p>Last Name: <span><%= rowStudent.last_name %></span></p>
     <p>Email: <span><%= rowStudent.email %></span></p>
