--- a/views/students/edit-student.ejs
+++ b/views/students/edit-student.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Edit Student</title>
-  </head>
+  <%- include('../partials/meta', {title: title}) %>
   <body>
+    <% include ../partials/navigation %>
     <h3>Edit Students</h3>
       <form method="post">
         <p>First Name: <input type="text" name="firstname" value="<%= row.first_name %>"/></p>
