--- a/views/students/student.ejs
+++ b/views/students/student.ejs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Students</title>
-  </head>
+  <%- include('../partials/meta', {title: title}) %>
   <body>
+    <% include ../partials/navigation %>
+
     <h3>Students Data</h3>
     <a href="/students/add">Add Student</a>
 
