--- a/views/subjects/give-score.ejs
+++ b/views/subjects/give-score.ejs
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Give Score</title>
-  </head>
+  <%- include('../partials/meta', {title: title}) %>
   <body>
+    <% include ../partials/navigation %>
+
     <h3>Input Score</h3>
     <p>Name: <%= student.Student.first_name %> <%= student.Student.last_name %></p>
     <p>Subject: <%= student.Subject.subject_name %></p>
