--- a/views/subjects/subject.ejs
+++ b/views/subjects/subject.ejs
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Subjects</title>
-
-    <style>
-      ul {
-        padding: 0;
-      }
-
-      ul li {
-        list-style-type: none;
-      }
-    </style>
-  </head>
+  <%- include('../partials/meta', {title: title}) %>
   <body>
+    <% include ../partials/navigation %>
+
     <table style="width: 100%;">
       <thead>
         <tr>
@@ -34,8 +21,10 @@
             <td>
               <% rowsTeacher.forEach(teacher => { %>
                 <% if (subject.id === teacher.SubjectId) { %>
-                  <ul>
-                    <li><%= teacher.first_name %></li>
+                  <ul style="padding: 0">
+                    <li style="list-style-type: none">
+                      <%= teacher.first_name %>
+                    </li>
                   </ul>
                 <% } %>
               <% }) %>
