--- a/views/teachers/add-teacher.ejs
+++ b/views/teachers/add-teacher.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Add Teacher</title>
+    <%- include('../partials/meta', {title: title}) %>
   </head>
   <body>
+    <% include ../partials/navigation %>
+
     <h3>Add Teacher</h3>
     <% if (err.errors !== undefined) { %>
       <% err.errors.forEach(err => { %>
