--- a/views/teachers/edit-teacher.ejs
+++ b/views/teachers/edit-teacher.ejs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Edit Teacher</title>
+    <%- include('../partials/meta', {title: title}) %>
   </head>
   <body>
+    <% include ../partials/navigation %>
+
     <h3>Edit Teacher</h3>
       <form method="post">
         <p>First Name: <input type="text" name="firstname" value="<%= rowTeacher.first_name %>"/></p>
